ftp solution for mlfow artifactory

--- a/notebooks/log_artifact.ipynb
+++ b/notebooks/log_artifact.ipynb
@@ -2,124 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.11.0'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import cv2\n",
-    "import mlflow\n",
-    "mlflow.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mlflow.set_registry_uri(\"127.0.0.1:80\")\n",
-    "mlflow.set_tracking_uri(\"http://127.0.0.1:80\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exp = mlflow.get_experiment('4')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./mlruns/4/8e86d9ec68b641498d3ea428b8669c92/artifacts\n"
+      "mlflow version: 1.11.0\n",
+      "INFO: 'Default' does not exist. Creating a new experiment\n",
+      "tracking uri: http://localhost:5000/\n",
+      "artifact uri: ftp://mlflow:mlflow@localhost/3/62211711a0a2469497d1520f1af5ce1a/artifacts\n"
      ]
     }
    ],
    "source": [
-    "print(mlflow.get_artifact_uri())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Experiment: artifact_location='./mlruns/4', experiment_id='4', lifecycle_stage='active', name='Artifacts', tags={}>"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "mlflow.set_experiment(\"Artifacts\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_path = r\"C:\\Users\\Evgenii_Brovkin\\Downloads\\img.PNG\"\n",
-    "image = cv2.imread(image_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mlflow.end_run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with mlflow.start_run():\n",
-    "    artifact_path = image_path\n",
-    "    mlflow.log_artifact(\n",
-    "        artifact_path,\n",
-    "        'images'\n",
-    "    )"
+    "import os\n",
+    "import tempfile\n",
+    "\n",
+    "import mlflow\n",
+    "\n",
+    "mlflow.set_tracking_uri(\"http://localhost:5000/\")\n",
+    "print('mlflow version:', mlflow.__version__)\n",
+    "mlflow.set_experiment(\"Default\")\n",
+    "\n",
+    "with tempfile.TemporaryDirectory() as tmp_dir, mlflow.start_run() as run:\n",
+    "    # Added this line\n",
+    "    print('tracking uri:', mlflow.get_tracking_uri())\n",
+    "    print('artifact uri:', mlflow.get_artifact_uri())\n",
+    "\n",
+    "    fname = 'sample.txt'\n",
+    "    tmp_path = os.path.join(tmp_dir, fname)\n",
+    "\n",
+    "    # create a text file to log\n",
+    "    with open(tmp_path, 'w') as f:\n",
+    "        f.write(\"sample\")\n",
+    "\n",
+    "    # logging\n",
+    "    mlflow.log_param(\"p\", 0)\n",
+    "    mlflow.log_metric(\"m\", 1)\n",
+    "    mlflow.log_artifact(tmp_path)"
    ]
   }
  ],
